--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Docs</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: rgb(28, 28, 28);
+      color: rgb(187, 225, 255);
+      font-family: 'Roboto', sans-serif;
+    }
+    a {
+      color: rgb(255, 234, 157);
+      padding-bottom: 12px;
+    }
+  </style>
 </head>
 <body>
   <h1>Docs</h1>
@@ -11,7 +23,7 @@
     <ul>
     <% documents.forEach(doc => { %>
       <li>
-        <a href="/<%= doc.name %>" target="_blank"><%= doc.name %></a>
+        <a href="/<%= doc.name %>" target="_blank"><%= doc.name.charAt(0).toUpperCase() + doc.name.slice(1) %></a>
       </li>
     <% }) %>
   </ul>
